
2025-01-10
----------
- increased delay between random sounds
- uses sounds mod
- items that horses like & appetite configred from settings


v1.2
----
- use setting "mount_turn_player_look" instead of "whinny.enable_mouse_ctrl"
- used proper method for setting rotation compensation between rider & horse
- added localization support


v1.1
----
- player "sits" on horse if player_api mod is available
- fixed drops
- added mobs:leather to drops if available


v1.0
----
- forked from original whinny mod
- updated for 0.4.16/5.x Minetest
- renamed horses
- added settings for min/max spawn height & spawn chance
- changed setting "only_peaceful_whinny" to "whinny.peaceful_only"
- player faces same direction as horse after mounting
- added setting to use mouse/look direction to control left/right turning (enabled by default)
- horse can follow multiple items
- added sounds for when damaged
- added sounds for when in "walk" & "stand" states
- added galloping sounds while riding
- mobs:lasso can be used to pick up tamed horses